--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-bower": "0.0.10",
     "gulp-filter": "^2.0.2",
     "gulp-jade": "~0.9.0",
+    "gulp-markdown": "^1.0.0",
     "gulp-minify-css": "~0.3.5",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
