--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "gulp-autoprefixer": "1.0.1",
     "gulp-bower": "0.0.10",
     "gulp-filter": "^2.0.2",
+    "gulp-gh-pages": "^0.5.2",
     "gulp-jade": "~0.9.0",
     "gulp-markdown": "^1.0.0",
     "gulp-minify-css": "~0.3.5",
+    "gulp-ng-annotate": "^1.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-stylus": "~2.0.0",
