--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "0.12"
+before_install:
+- npm install -g bower gulp-cli karma-cli
 after_success:
   - gulp deploy
 env:
