--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "gulp-uglify": "~1.0.1",
     "gulp-util": "~3.0.1",
     "karma": "~0.12.21",
-    "karma-chrome-launcher": "~0.1.4",
+    "karma-phantomjs-launcher": "~0.1.4",
     "karma-cli": "0.0.4",
     "karma-coffee-preprocessor": "~0.2.1",
     "karma-jasmine": "~0.2.2",
