--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-animate": "^1.5.5",
+    "angular-aria": "^1.5.5",
     "angular-material": "^0.9.4",
     "angular-material-icons": "^0.4.0",
     "angular-resource": "^1.3.15",
@@ -52,10 +54,10 @@
     "gulp-uglify": "~1.0.1",
     "gulp-util": "~3.0.1",
     "karma": "~0.12.21",
-    "karma-phantomjs-launcher": "~0.1.4",
     "karma-cli": "0.0.4",
     "karma-coffee-preprocessor": "~0.2.1",
     "karma-jasmine": "~0.2.2",
+    "karma-phantomjs-launcher": "~0.1.4",
     "oauth-1.0a": "^0.2.1",
     "pretty-hrtime": "~0.2.2",
     "vinyl-source-stream": "~1.0.0",
